# Medi-Token-Rust

./: .env.sample  .gitignore  Cargo.toml  Makefile  NEAR_CONTRACT_SETUP.md  NEAR_DEPLOYMENT.md  Readme.md
.cargo-near/: Cargo.toml
near-contract/: Cargo.toml
near-contract/src/: lib.rs
src/: abi.rs  deployment.rs  error.rs  lib.rs  near_token.rs  token.rs  utils.rs
src/tests/: error_tests.rs  token_tests.rs  utils_tests.rs
tests/: abi_tests.rs  deployment_tests.rs  healthcare_integration_tests.rs
