[package]
name = "medi-token"
version = "0.1.0"
edition = "2021"
authors = ["Ritankar Saha <ritankar.saha786@gmail.com>"]
description = "MediToken - ERC20-like token for healthcare applications in Rust"
license = "MIT"
repository = "https://github.com/ritankarsaha/Medi-Token-Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "std"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
web3 = "0.19"

[dev-dependencies]
assert_matches = "1.5"

[lib]
name = "medi_token"
path = "src/lib.rs"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"