[package]
name = "medi-token"
version = "0.1.0"
edition = "2021"
authors = ["Ritankar Saha <ritankar.saha786@gmail.com>"]
description = "MediToken - ERC20-like token for healthcare applications in Rust"
license = "MIT"
repository = "https://github.com/ritankarsaha/Medi-Token-Rust"

[lib]
name = "medi_token"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
hex = "0.4.3"
sha3 = "0.10.8"
k256 = { version = "0.13.3", features = ["ecdsa", "std"] }
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["json"], optional = true }
ethers = { version = "1.0", features = ["rustls", "ws"], optional = true }
web3 = { version = "0.18", optional = true }
near-sdk = { version = "5.17.1", features = ["unit-testing"] }
near-contract-standards = { version = "5.17.1" }

[dev-dependencies]
assert_matches = "1.5.0"

[features]
default = []
networking = ["reqwest"]
blockchain = ["reqwest"]

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"