[package]
name = "medi-token-near"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "../src/near_token.rs"

[dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
