[package]
name = "medi-token-near"
version = "0.1.0"
edition = "2021"
authors = ["Ritankar Saha <ritankar.saha786@gmail.com>"]
description = "MediToken NEAR NEP-141 Fungible Token Contract"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"
borsh = "1.5.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
